# em_z80

./: Cargo.toml  LICENSE  README.md
screenshots/: Jetpack.scr
src/: build.rs  cpu.rs  main.rs
src/lib/: Cargo.toml  cpu.rs  instructions.rs  lib.rs  memory.rs  opcodes.rs  registers.rs  util.rs
src/lib/em_z80/: Cargo.toml  cpu.rs  instructions.rs  lib.rs  memory.rs  opcodes.rs  registers.rs  util.rs
src/lib/spectrum/: Cargo.toml  keyboard.rs  lib.rs  ula.rs
src/ui/: main_window.slint
