[package]
name = "em_z80"
version = "0.1.0"
edition = "2021"
authors = ["Dan Shepherd"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies]
# For GL rendering
cocoa = { version = "0.25.0" }

[dependencies]
slint = { version="1.3.2", default-features=false, features = ["std", "compat-1-2", "backend-winit", "renderer-skia"] }

[build-dependencies]
slint-build = "1.3.2"

[dependencies.em_z80_lib]
path = "src/lib"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3